--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
 		"module": "commonjs",
 		"target": "ES2020",
 		"outDir": "out",
+		"removeComments": true,      // 删除注释 
 		"lib": [
 			"ES2020"
 		],
+		"suppressImplicitAnyIndexErrors": true,
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true   /* enable all strict type-checking options */
