--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
         "@typescript-eslint/naming-convention": "warn",
         "@typescript-eslint/semi": "off",
         "curly": "warn",
-        "eqeqeq": "warn",
+        "eqeqeq": "off",
         "no-throw-literal": "warn",
         "semi": "off"
     },
