--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:markdown-image-manage.helloWorld"
+    "onCommand:markdown-image-manage.analyze",
+    "onCommand:markdown-image-manage.clean",
+    "onCommand:markdown-image-manage.download",
+    "onCommand:markdown-image-manage.upload",
+    "onCommand:markdown-image-manage.uploadall",
+    "onCommand:markdown-image-manage.move"
   ],
   "repository": {
     "url": "https://gitee.com/pattazl/markdown-image-manage"
@@ -20,29 +25,32 @@
     "submenus": [
       {
         "id": "markdown-image-manage.menulist",
-        "label": "%extension.helloWorld.title%"
+        "label": "%markdown-image-manage.menuName%"
       }
     ],
     "commands": [
       {
         "command": "markdown-image-manage.analyze",
-        "title": "Analyze"
+        "title": "%markdown-image-manage.menuAnalyze%"
       },
       {
         "command": "markdown-image-manage.clean",
-        "title": "Clean"
+        "title": "%markdown-image-manage.menuClean%"
       },
       {
         "command": "markdown-image-manage.download",
-        "title": "Download"
+        "title": "%markdown-image-manage.menuDownload%"
       },
       {
         "command": "markdown-image-manage.upload",
-        "title": "Upload"
+        "title": "%markdown-image-manage.menuUpload%"
+      },{
+        "command": "markdown-image-manage.uploadall",
+        "title": "%markdown-image-manage.menuUploadAll%"
       },
       {
         "command": "markdown-image-manage.move",
-        "title": "Move"
+        "title": "%markdown-image-manage.menuMove%"
       }
     ],
     "menus": {
@@ -56,10 +64,11 @@
       "markdown-image-manage.menulist": [
         {
           "command": "markdown-image-manage.analyze",
-          "group": "2_workspace"
-        },{
+          "group": "1_workspace"
+        },
+        {
           "command": "markdown-image-manage.clean",
-          "group": "2_workspace"
+          "group": "1_workspace"
         },
         {
           "command": "markdown-image-manage.download",
@@ -70,11 +79,52 @@
           "group": "2_workspace"
         },
         {
+          "command": "markdown-image-manage.uploadall",
+          "group": "2_workspace"
+        },
+        {
           "command": "markdown-image-manage.move",
           "group": "2_workspace"
         }
       ]
-    }
+    },
+    "icon": "lark_logo_pic.png",
+    "configuration": {
+			"type": "object",
+			"title": "Markdown Image Manage",
+			"properties": {
+        "markdown-image-manage.removeFolder": {
+					"type": "string",
+					"default": "md-img-remove",
+					"description": "%markdown-image-manage.removeFolder%"
+				},
+				"markdown-image-manage.hasBracket": {
+					"type": "boolean",
+					"default": false,
+					"description": "%markdown-image-manage.hasBracket%"
+				},
+        "markdown-image-manage.imageSaveFolder": {
+					"type": "string",
+					"default": "<filename>.assets",
+					"description": "%markdown-image-manage.imageSaveFolder%"
+				},
+        "markdown-image-manage.updateLink": {
+					"type": "boolean",
+					"default": true,
+					"description": "%markdown-image-manage.updateLink%"
+				},
+        "markdown-image-manage.rename": {
+					"type": "boolean",
+					"default": false,
+					"description": "%markdown-image-manage.rename%"
+				},
+        "markdown-image-manage.remotePath": {
+					"type": "string",
+					"default": "<filename>",
+					"description": "%markdown-image-manage.remotePath%"
+				}
+			}
+		}
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -96,9 +146,16 @@
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "gulp": "^4.0.2",
+    "del": "^6.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "vscode-nls-dev": "^4.0.0"
   },
   "dependencies": {
-    "fs-extra": "^10.0.1"
+    "fs-extra": "^10.0.1",
+    "vscode-nls": "^5.0.0"
   }
 }
