--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "markdown-image-manage",
   "displayName": "Markdown Image Manage",
-  "description": "Download,Move,Clean,Upload markdown images,下载,移动,清理,分析,上传MD文件中的图片",
-  "version": "0.0.4",
+  "description": "Download,Move,Clean,Upload markdown's images(Markdown MIM)下载,移动,清理,分析,上传MD文件中的图片",
+  "version": "0.0.5",
   "publisher": "AustinYoung",
   "icon": "icon.png",
   "engines": {
