1. add function: can paste clipboard image and define image's path 2. fix the bug, can download images when https is unauthorized 3. optimize the analysis of images mark

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,18 @@
 			"preLaunchTask": "${defaultBuildTask}"
 		},
 		{
+			"name": "Copy and Run",
+			"type": "extensionHost",
+			"request": "launch",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}"
+			],
+			"outFiles": [
+				"${workspaceFolder}/out/**/*.js"
+			],
+			"preLaunchTask": "CopyScript"
+		},
+		{
 			"name": "Extension Tests",
 			"type": "extensionHost",
 			"request": "launch",
