--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
       {
         "command": "markdown-image-manage.upload",
         "title": "%markdown-image-manage.menuUpload%"
-      },{
+      },
+      {
         "command": "markdown-image-manage.uploadclip",
         "title": "%markdown-image-manage.menuUploadClip%"
       },
@@ -128,67 +129,71 @@
       ]
     },
     "configuration": {
-			"type": "object",
-			"title": "Markdown Image Manage",
-			"properties": {
+      "type": "object",
+      "title": "Markdown Image Manage",
+      "properties": {
         "markdown-image-manage.removeFolder": {
-					"type": "string",
-					"default": "md-img-remove",
-					"description": "%markdown-image-manage.removeFolder%"
-				},
-				"markdown-image-manage.hasBracket": {
-					"type": "string",
-					"default": "auto",
-					"enum": ["auto", "yes", "no"],
-					"description": "%markdown-image-manage.hasBracket%"
-				},
+          "type": "string",
+          "default": "md-img-remove",
+          "description": "%markdown-image-manage.removeFolder%"
+        },
+        "markdown-image-manage.hasBracket": {
+          "type": "string",
+          "default": "auto",
+          "enum": [
+            "auto",
+            "yes",
+            "no"
+          ],
+          "description": "%markdown-image-manage.hasBracket%"
+        },
         "markdown-image-manage.imageSaveFolder": {
-					"type": "string",
-					"default": "<filename>.assets",
-					"description": "%markdown-image-manage.imageSaveFolder%"
-				},
+          "type": "string",
+          "default": "<filename>.assets",
+          "description": "%markdown-image-manage.imageSaveFolder%"
+        },
         "markdown-image-manage.updateLink": {
-					"type": "boolean",
-					"default": true,
-					"description": "%markdown-image-manage.updateLink%"
-				},
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown-image-manage.updateLink%"
+        },
         "markdown-image-manage.skipSelectChange": {
-					"type": "boolean",
-					"default": false,
-					"description": "%markdown-image-manage.skipSelectChange%"
-				},
+          "type": "boolean",
+          "default": false,
+          "description": "%markdown-image-manage.skipSelectChange%"
+        },
         "markdown-image-manage.rename": {
-					"type": "boolean",
-					"default": false,
-					"description": "%markdown-image-manage.rename%"
-				},
+          "type": "boolean",
+          "default": false,
+          "description": "%markdown-image-manage.rename%"
+        },
         "markdown-image-manage.remotePath": {
-					"type": "string",
-					"default": "<filename>",
-					"description": "%markdown-image-manage.remotePath%"
-				},
+          "type": "string",
+          "default": "<filename>",
+          "description": "%markdown-image-manage.remotePath%"
+        },
         "markdown-image-manage.timeoutDownload": {
-					"type": "number",
-					"default": 10,
-					"description": "%markdown-image-manage.downloadTimeout%"
-				},
+          "type": "number",
+          "default": 10,
+          "description": "%markdown-image-manage.downloadTimeout%"
+        },
         "markdown-image-manage.timeoutUpload": {
-					"type": "number",
-					"default": 10,
-					"description": "%markdown-image-manage.uploadTimeout%"
-				},
+          "type": "number",
+          "default": 10,
+          "description": "%markdown-image-manage.uploadTimeout%"
+        },
         "markdown-image-manage.clipboardPath": {
-					"type": "string",
-					"default": "<filename>.assets/<YYMMDDHHmmss>.png",
-					"description": "%markdown-image-manage.clipboardPath%"
-				},
+          "type": "string",
+          "default": "<filename>.assets/<YYMMDDHHmmss>.png",
+          "description": "%markdown-image-manage.clipboardPath%"
+        },
         "markdown-image-manage.urlFormatted": {
-					"type": "boolean",
-					"default": true,
-					"description": "%markdown-image-manage.urlFormatted%"
-				}
-			}
-		}
+          "type": "boolean",
+          "default": true,
+          "description": "%markdown-image-manage.urlFormatted%"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -210,7 +215,9 @@
     "upload",
     "move file",
     "clean",
-    "covert","paste","clipboard",
+    "covert",
+    "paste",
+    "clipboard",
     "picgo",
     "pic bed"
   ],
@@ -223,23 +230,20 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vscode/test-electron": "^2.1.3",
-    "eslint": "^8.11.0",
-    "glob": "^7.2.0",
-    "mocha": "^9.2.2",
-    "typescript": "^4.5.5",
-    "gulp": "^4.0.2",
+    "dayjs": "^1.7.4",
     "del": "^6.0.0",
+    "esbuild": "^0.15.1",
+    "eslint": "^8.11.0",
+    "fs-extra": "^10.0.1",
+    "glob": "^7.2.0",
+    "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "vscode-nls-dev": "^4.0.0",
-    "esbuild": "^0.15.1",
-    "fs-extra": "^10.0.1",
+    "is-wsl": "^2.2.0",
+    "mocha": "^9.2.2",
+    "typescript": "^4.5.5",
     "vscode-nls": "^5.0.0",
-    "dayjs": "^1.7.4",
-    "is-wsl": "^2.2.0"
-  },
-  "dependencies": {
-
+    "vscode-nls-dev": "^4.0.0"
   }
 }
