--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "mocha": "^9.2.2",
     "typescript": "^4.5.5",
     "vscode-nls": "^5.0.0",
-    "vscode-nls-dev": "^4.0.0"
+    "vscode-nls-dev": "^4.0.0",
+    "file-type": "^16.5.3"
   }
 }
