--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"outDir": "out",
 		"removeComments": true,      // 删除注释 
 		"lib": [
-			"ES2020"
+			"ES2020",
+			"DOM"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
