修改默认配置文件名，修改界面显示优化

--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -40,8 +40,12 @@ guiMonitorNum  =  2
  ; 第几个屏幕
 guiMargin  =  5     
  ; 多个窗口间的间隔
+guiWordBreak = 1
+ ; 显示按键是否强制换行，会有细边框
 txtSplit  = " "  
  ; 按键的分隔符
+
+ 
 ctrlState  = 1
  ; 是否显示 控制键状态，如果出现则显示
 ctrlX  = 10  
