增加可忽略显示按键清单和是否忽略单独控制键

--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -1,6 +1,8 @@
 [common]
-skipKeys =""
-; | 分割要过滤的字符
+skipRecord =""
+; | 分割要过滤的字符，哪些按键要忽略记录
+skipCtrlKey = 0
+; 是否忽略单独的控制键，不记录
 [dialog]
 guiWidth  =  240   
  ; 宽度
@@ -56,3 +58,5 @@ ctrlTextSize  =  20
  ; 字体大小
 ctrlList = "Ctrl|Alt|LWin|Shift|RWin|CapsLock"
 ; 哪些按键长按会显示出来
+skipShow = ""
+; 哪些按键不会显示，但会记录
