主程序更新，完善键盘功能

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -3,8 +3,10 @@ skipRecord =""
 ; | 分割要过滤的字符，哪些按键要忽略记录
 skipCtrlKey = 1
 ; 是否忽略单独的控制键，不记录
-onlyRecordKey = 0
-; 只记录按键，不显示
+needShowKey = 1
+; 是否显示按键
+needRecordKey = 1
+; 是否记录按键
 ctrlState  = 1
  ; 是否显示 控制键状态，如果出现则显示
 serverPort  = 9900
