--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -1,65 +1,35 @@
 [common]
-skipRecord ="" 
-; | 分割要过滤的字符，哪些按键要忽略记录
-skipCtrlKey = 1
-; 是否忽略单独的控制键，不记录
-onlyRecordKey = 0
-; 只记录按键，不显示
-ctrlState  = 1
- ; 是否显示 控制键状态，如果出现则显示
-serverPort  = 9900
- ; 后端服务端口号
-[dialog]
-guiWidth  =  240
- ; 宽度
-guiHeigth  =  0  
- ;高度 0 为自动高度
-guiBgcolor  =  "11AA99"  
- ; 背景色
-guiBgTrans  =  0  
- ; 背景完全透明
-guiTrans  =  1
- ; 鼠标穿透
-guiOpacity  =  150  
- ; 0-255
-guiTextFont = "Verdana"
-; 字体
-guiTextSize = 26 
-; 字体大小
-guiTextWeight  =  "bold"  
- ; 是否粗体
-guiTextColor  =  "FF0000"  
- ; 是否粗体
-guiLife  =  7000  
- ; 显示多少毫秒消失
-guiInterval  =  1000  
- ; 窗体间隔毫秒
-guiPos  =  "BR"  
- ; TL,TR,BL,BR 上下左右位置
-guiPosXY  =  "Y"  
- ; 旧窗口移动位置 X / Y 默认为 Y
-guiPosOffsetX  = 0  
- ;位置X调整
-guiPosOffsetY  =  -50  
- ;位置y调整
-guiDpiscale  = 0  
- ; 是否进行DPI 缩放
-guiMonitorNum  =  2  
- ; 第几个屏幕
-guiMargin  =  5     
- ; 多个窗口间的间隔
-guiEdge = 1
- ; 是否有细边框
-txtSplit  = ""  
- ; 按键的分隔符
+skipRecord=
+skipCtrlKey=1
+needShowKey=1
+needRecordKey=1
+ctrlState=1
+serverPort=9900
 
-ctrlX  = 10  
- ; 控制键X位置
-ctrlY  = 5  
- ; 控制键Y位置
-ctrlTextSize  =  20  
- ; 字体大小
-ctrlList = "Ctrl|Alt|LWin|Shift|RWin|CapsLock"
-; 哪些按键长按会显示出来
-skipShow = "<^<+a|PrintScreen"
-; 哪些按键不会显示，但会记录
+[dialog]
+guiWidth=240
+guiHeigth=0
+guiBgcolor=11AA99
+guiBgTrans=0
+guiTrans=1
+guiOpacity=150
+guiTextFont=Verdana
+guiTextSize=26
+guiTextWeight=bold
+guiTextColor=FF0000
+guiLife=7000
+guiInterval=1000
+guiPos=BR
+guiPosXY=Y
+guiPosOffsetX=0
+guiPosOffsetY=-50
+guiDpiscale=0
+guiMonitorNum=2
+guiMargin=5
+guiEdge=1
+txtSplit=
+ctrlX=10
+ctrlY=5
+ctrlTextSize=20
+ctrlList=Ctrl|Alt|LWin|Shift|RWin|CapsLock
+skipShow=<^<+a|PrintScreen
