增加 显示和记录鼠标事件 的配置 修改客户端UI的基本配置

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -3,6 +3,10 @@ skipRecord =""
 ; | 分割要过滤的字符，哪些按键要忽略记录
 skipCtrlKey = 1
 ; 是否忽略单独的控制键，不记录
+showMouseEvent = 1
+; 是否显示和记录鼠标事件
+recordMouseMove = 0
+; 是否记录鼠标移动距离
 needShowKey = 1
 ; 是否显示按键
 needRecordKey = 1
