--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -1,11 +1,11 @@
 [common]
 skipRecord=
-skipCtrlKey=1
+skipCtrlKey=0
 needShowKey=1
 needRecordKey=1
 ctrlState=1
 serverPort=9900
-
+showMouseEvent = 1
 [dialog]
 guiWidth=240
 guiHeigth=0
@@ -27,7 +27,7 @@ guiDpiscale=0
 guiMonitorNum=2
 guiMargin=5
 guiEdge=1
-txtSplit=
+txtSplit=" "
 ctrlX=10
 ctrlY=5
 ctrlTextSize=20
