--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview",
-    "deploy": "bash scripts/deploy.sh"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@vicons/fluent": "^0.8.0",
@@ -22,6 +21,6 @@
     "unplugin-vue-components": "^0.25.2",
     "vfonts": "^0.1.0",
     "vite": "^2.2.4",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^1.8.8"
   }
 }
