增加可以支持 显示和记录鼠标操作的参数，增加支持鼠标移动距离的参数

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -4,7 +4,7 @@ skipRecord =""
 skipCtrlKey = 1
 ; 是否忽略单独的控制键，不记录
 showMouseEvent = 1
-; 是否显示和记录鼠标事件
+; 是否显示和记录鼠标事件, 00高位表示显示，低位表示记录，所以1仅记录，2是显示不记录，3是显示和记录，
 recordMouseMove = 0
 ; 是否记录鼠标移动距离
 needShowKey = 1
