--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -5,7 +5,8 @@ needShowKey=1
 needRecordKey=1
 ctrlState=1
 serverPort=9900
-showMouseEvent = 1
+showMouseEvent = 3
+recordMouseMove = 1
 [dialog]
 guiWidth=240
 guiHeigth=0
