增加sqlite的相关库，可以保存数据到sqlite中

--- a/http/package.json
+++ b/http/package.json
@@ -12,6 +12,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "esbuild": "^0.15.1"
+    "esbuild": "^0.15.1",
+    "sqlite3": "^5.1.6"
   }
 }
