增加激活窗口的正则匹配参数

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -15,6 +15,8 @@ ctrlState  = 1
  ; 是否显示 控制键状态，如果出现则显示
 serverPort  = 9900
  ; 后端服务端口号
+activeWindowProc = ""
+; 按键显示仅仅针对活跃窗口，正则匹配
 [dialog]
 guiWidth  =  240
  ; 宽度
