--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -10,6 +10,7 @@
     "@vicons/fluent": "^0.8.0",
     "axios": "^0.21.1",
     "naive-ui": "^2.34.4",
+    "pinia": "^2.1.6",
     "qs": "^6.10.1",
     "vue": "^3.0.11"
   },
