--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "serve": "vite preview"
+
   },
   "dependencies": {
     "@vicons/fluent": "^0.8.0",
+    "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.21.1",
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.6",
@@ -21,7 +23,6 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vfonts": "^0.1.0",
-    "vite": "^2.2.4",
-    "vue-tsc": "^1.8.8"
+    "vite": "^2.2.4"
   }
 }
