--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -5,7 +5,6 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
-
   },
   "dependencies": {
     "@vicons/fluent": "^0.8.0",
@@ -14,7 +13,8 @@
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.6",
     "qs": "^6.10.1",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
