增加配置界面，增加服务器端PC参数获取功能

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -37,7 +37,7 @@ guiTextSize = 26
 guiTextWeight  =  "bold"  
  ; 是否粗体
 guiTextColor  =  "FF0000"  
- ; 是否粗体
+ ; 字体颜色
 guiLife  =  7000  
  ; 显示多少毫秒消失
 guiInterval  =  1000  
