动态拉取数据，后端支持字体

--- a/http/package.json
+++ b/http/package.json
@@ -9,7 +9,8 @@
     "dayjs": "^1.8.16",
     "express": "^4.17.1",
     "ini": "^4.1.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "font-list":"^1.5.1"
   },
   "devDependencies": {
     "esbuild": "^0.15.1",
