增加开关可以隐藏按键显示

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -17,6 +17,8 @@ serverPort  = 9900
  ; 后端服务端口号
 activeWindowProc = ""
 ; 按键显示仅仅针对活跃窗口，正则匹配
+hotkey4Show = "^!+s"
+; 按键显示开关快捷键
 [dialog]
 guiWidth  =  240
  ; 宽度
