--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -8,6 +8,7 @@ serverPort=9900
 showMouseEvent = 3
 recordMouseMove = 1
 activeWindowProc = ""
+hotkey4Show = "^!+s"
 [dialog]
 guiWidth=240
 guiHeigth=0
