--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -19,6 +19,8 @@ activeWindowProc = ""
 ; 按键显示仅仅针对活跃窗口，正则匹配
 hotkey4Show = "^!+s"
 ; 按键显示开关快捷键
+showHttpDebug = 1
+; 是否显示http调试框
 [dialog]
 guiWidth  =  240
  ; 宽度
