--- a/showKeyBoard.ini
+++ b/showKeyBoard.ini
@@ -5,21 +5,22 @@ needShowKey=1
 needRecordKey=1
 ctrlState=1
 serverPort=9900
-showMouseEvent = 3
-recordMouseMove = 1
-activeWindowProc = ""
-hotkey4Show = "^!+s"
+showMouseEvent=3
+recordMouseMove=1
+activeWindowProc=
+hotkey4Show=^!+s
+showHttpDebug = 1
 [dialog]
 guiWidth=240
 guiHeigth=0
-guiBgcolor=11AA99
+guiBgcolor=8611AA
 guiBgTrans=0
 guiTrans=1
 guiOpacity=150
 guiTextFont=Verdana
 guiTextSize=26
 guiTextWeight=bold
-guiTextColor=FF0000
+guiTextColor=FFEE00
 guiLife=7000
 guiInterval=1000
 guiPos=BR
