--- a/ui-helper/tsconfig.json
+++ b/ui-helper/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "allowJs": true,
     "target": "esnext",
     "module": "esnext",
@@ -17,5 +19,5 @@
       ]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/*.vue","src/res/loading.webp"]
 }
