--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -10,6 +10,7 @@
     "@vicons/fluent": "^0.8.0",
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.11.10",
     "diff2html": "^3.4.43",
     "echarts": "^5.4.3",
     "naive-ui": "^2.34.4",
