适配esbuild打包，初步增加统计框架

--- a/ui-helper/tsconfig.json
+++ b/ui-helper/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
     "noEmit": true,
     "allowJs": true,
