--- a/ui-helper/tsconfig.json
+++ b/ui-helper/tsconfig.json
@@ -21,5 +21,5 @@
       ]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/*.vue","src/res/loading.webp"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/*.vue","src/res/loading.gif"]
 }
