--- a/http/package.json
+++ b/http/package.json
@@ -23,6 +23,7 @@
     "font-list": "^1.5.1",
     "ini": "^4.1.1",
     "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
