初步实现长按时，控制按键重复数

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -19,6 +19,10 @@ activeWindowProc = ""
 ; 按键显示仅仅针对活跃窗口，正则匹配
 hotkey4Show = "^!+s"
 ; 按键显示开关快捷键
+autoSave2Db = 180
+; 多少秒自动将按键信息保存到数据库中
+maxKeypressCount = 10
+; 按键不放重复次数上限
 showHttpDebug = 1
 ; 是否显示http调试框
 [dialog]
