增加配置参数

--- a/showKeyBoard.desc.ini
+++ b/showKeyBoard.desc.ini
@@ -22,9 +22,14 @@ hotkey4Show = "^!+s"
 autoSave2Db = 180
 ; 多少秒自动将按键信息保存到数据库中
 maxKeypressCount = 10
-; 按键不放重复次数上限
+; 普通按键按住不放重复次数上限
+maxCtrlpressCount = 1
+; 控制键按键不放重复次数上限
 showHttpDebug = 1
 ; 是否显示http调试框
+remoteType = 0
+; 远程控制模式，0 禁止远程 1 可远程查看，2 可远程查看和设置
+
 [dialog]
 guiWidth  =  240
  ; 宽度
