feat: 添加匹配尖括号格式图片链接的功能 fix: 修复图片文件带有大写字母时会被错误地清理的问题

--- a/package.json
+++ b/package.json
@@ -147,6 +147,11 @@
           ],
           "description": "%markdown-image-manage.hasBracket%"
         },
+        "markdown-image-manage.matchAngleBrackets": {
+					"type": "boolean",
+					"default": true,
+					"description": "%markdown-image-manage.matchAngleBrackets%"
+				},
         "markdown-image-manage.imageSaveFolder": {
           "type": "string",
           "default": "<filename>.assets",
