初步添加复制本地文件的功能 尝试添加按格式进行文件重命名

--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
         "title": "%markdown-image-manage.menuMove%"
       },
       {
+        "command": "markdown-image-manage.copy",
+        "title": "%markdown-image-manage.menuCopy%"
+      },
+      {
         "command": "markdown-image-manage.cleanlink",
         "title": "%markdown-image-manage.menuCleanLink%"
       },
@@ -100,6 +104,10 @@
         },
         {
           "command": "markdown-image-manage.move",
+          "group": "2_workspace"
+        },
+        {
+          "command": "markdown-image-manage.copy",
           "group": "2_workspace"
         },
         {
@@ -171,6 +179,11 @@
           "type": "boolean",
           "default": false,
           "description": "%markdown-image-manage.rename%"
+        },
+        "markdown-image-manage.nameFormat": {
+          "type": "string",
+          "default": "[D]",
+          "description": "%markdown-image-manage.nameFormat%"
         },
         "markdown-image-manage.remotePath": {
           "type": "string",
