--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
   "name": "markdown-image-manage",
   "displayName": "Markdown Image Manage",
-  "description": "Download,Move,Clean,Upload,Paste,Covert markdown's images(MIM)下载,移动,清理,分析,上传,粘帖,转换MD文件中的图片",
-  "version": "0.1.1",
+  "description": "Download,Move,Copy,Clean,Upload,Paste,Covert markdown's images(MIM)下载,移动,复制,清理,分析,上传,粘帖,转换MD文件中的图片",
+  "version": "0.1.2",
   "publisher": "AustinYoung",
   "icon": "icon.png",
   "engines": {
-    "vscode": "^1.46.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onCommand:markdown-image-manage.analyze",
-    "onCommand:markdown-image-manage.clean",
-    "onCommand:markdown-image-manage.cleanlink",
-    "onCommand:markdown-image-manage.download",
-    "onCommand:markdown-image-manage.upload",
-    "onCommand:markdown-image-manage.uploadclip",
-    "onCommand:markdown-image-manage.clipboardImage",
-    "onCommand:markdown-image-manage.convertImageFormat",
-    "onCommand:markdown-image-manage.convertImageLink",
-    "onCommand:markdown-image-manage.move",
     "onLanguage:markdown"
   ],
   "repository": {
