--- a/ui-helper/package.json
+++ b/ui-helper/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@vicons/fluent": "^0.8.0",
@@ -20,12 +22,18 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.4",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.1.3",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "typescript": "^5.9.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vfonts": "^0.1.0",
-    "vite": "^2.2.4"
+    "vite": "^2.2.4",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
